Fix animation on safari

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,12 +30,39 @@
 
 @layer utilities {
   @keyframes reset{0%{opacity:0.0}50%{opacity:0}100%{opacity:0}}
+  @-webkit-keyframes reset{0%{opacity:0.0}50%{opacity:0}100%{opacity:0}}
   @keyframes fade-in{0%{opacity:0.0}50%{opacity:0}100%{opacity:1.0}}
+  @-webkit-keyframes fade-in{0%{opacity:0.0}50%{opacity:0}100%{opacity:1.0}}
+
 
   .fade-in {
     animation-name: reset, fade-in;
+    -webkit-animation-name:reset, fade-in;
     animation-duration: 1s;
+    -webkit-animation-duration:1s;
     animation-timing-function: ease-in;
+    -webkit-animation-timing-function:ease-in;
     animation-iteration-count: 1;
+    -webkit-animation-iteration-count:1;
+  }
+
+  .fade-in.one {
+    -webkit-animation-delay: 0s, 0.1s;
+    animation-delay: 0s, 0.1s;
+  }
+
+  .fade-in.two {
+    -webkit-animation-delay: 0s, 0.3s;
+    animation-delay: 0s, 0.3s;
+  }
+
+  .fade-in.three {
+    -webkit-animation-delay:0s, 0.5s;
+    animation-delay: 0s, 0.5s;
+  }
+
+  .fade-in.fout {
+    -webkit-animation-delay:0s, 0.7s;
+    animation-delay: 0s, 0.7s;
   }
 }
